Fixed license info text, worked on Debugger
git-svn-id: svn://svn.code.sf.net/p/nbbeanshell/code@16 1aae85c6-19f3-460c-a681-f389938dc47c